# twilio-gpt-admin

./: .gitignore  .replit  README.md  app.py  config.py  dump.rdb  init_db.py  models.py  pyproject.toml  replit.nix  worker.py
static/css/: custom.css
static/js/: dashboard.js
templates/: base.html  dashboard.html  login.html  templates.html  twilio_numbers.html
utils/: message_handler.py  openai_handler.py  redis_handler.py  redis_helper.py  twilio_handler.py
