[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.53.0",
    "psycopg2-binary>=2.9.10",
    "twilio>=9.3.6",
    "redis>=5.2.0",
    "rq>=2.0.0",
    "flask-login>=0.6.3",
]
